k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: paocloud-info
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: info.paocloud.in.th
    http:
      paths:
      - path: /
        backend:
          serviceName: paocloud-info 
          servicePort: 80
